--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^5.1.0"
+    "@craco/craco": "^6.4.0",
+    "@semantic-ui-react/craco-less": "^1.2.3",
+    "concurrently": "^5.1.0",
+    "semantic-ui-less": "^2.4.1"
   },
   "dependencies": {
-    "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4"
   }
 }
