--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-semantic-ui-datepickers": "^2.15.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -44,6 +45,7 @@
   "devDependencies": {
     "@craco/craco": "^6.4.0",
     "@semantic-ui-react/craco-less": "^1.2.3",
-    "semantic-ui-less": "^2.4.1"
+    "semantic-ui-less": "^2.4.1",
+    "semantic-ui-react": "^2.0.4"
   }
 }
