--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "semantic-ui-less": "^2.4.1"
   },
   "dependencies": {
-    "semantic-ui-react": "^2.0.4"
+    "semantic-ui-react": "^2.0.4",
+    "uuid": "^8.3.2"
   }
 }
